tera/src/snapshot_tests/snapshots/tera__snapshot_tests__build_errors__build_errors@unknown_component.txt.snap
---
source: tera/src/snapshot_tests/build_errors.rs
expression: "&err"
input_file: tera/src/snapshot_tests/build_errors/unknown_component.txt
---
error: Unknown component `missing`
 --> parent:1:4
  |
1 | {% <missing> -%} hello {%- </missing> %}
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
